--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -5,13 +5,15 @@
 # Theme Setting
 # Doc: https://gitpitch.com/docs/settings/theme
 #
-theme : simple
+theme : sky
+
 
 #
 # Theme-Override Setting
 # Doc: https://gitpitch.com/docs/settings/custom-theme
 #
 theme-override: assets/css/PITCHME.css
+.bg-white  { background: #FFFFFF !important; }
 
 #
 # Logo Setting
