--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -5,7 +5,7 @@
 # Theme Setting
 # Doc: https://gitpitch.com/docs/settings/theme
 #
-theme : sky
+theme : beige
 
 
 #
@@ -32,7 +32,7 @@ layout : center
 # Footnote Setting
 # Doc: https://gitpitch.com/docs/settings/footnote
 #
-footnote : "Timo Szczepanska - tsz000@uit.no"
+footnote : "Timo Szczepanska -BRIDGE Jan/2019- tsz000@uit.no"
 
 #
 # Published Setting
