--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -25,7 +25,7 @@ logo-postion : top-left
 # Layout Setting
 # Doc: https://gitpitch.com/docs/settings/layout
 #
-layout : center-left
+layout : center
 
 #
 # Footnote Setting
