--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -25,13 +25,13 @@ logo-postion : top-right
 # Layout Setting
 # Doc: https://gitpitch.com/docs/settings/layout
 #
-layout : top-left
+layout : top-center
 
 #
 # Footnote Setting
 # Doc: https://gitpitch.com/docs/settings/footnote
 #
-footnote : "Timo Szczepanska -BRIDGE Jan/2019- tsz000@uit.no"
+footnote : "Timo Szczepanska - BRIDGE Jan/2019- tsz000@uit.no"
 
 #
 # Published Setting
@@ -43,6 +43,6 @@ published : true
 # Twitter Card Settings [Pro Only]
 # Doc: https://gitpitch.com/docs/settings/twitter-card
 #
-title : "Intro to Bridge"
+title : "Intro for Bridge"
 description : "15 min of me"
 thumbnail : https://gitpitch.com/gpimg/tutorial-thumb.png
