--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -19,13 +19,13 @@ theme-override: assets/css/PITCHME.css
 # https://gitpitch.com/docs/settings/logo
 #
 logo : assets/img/logo_ui.png
-logo-postion : top
+logo-postion : top/left
 
 #
 # Layout Setting
 # Doc: https://gitpitch.com/docs/settings/layout
 #
-layout : top-center
+layout : top
 
 #
 # Footnote Setting
